adding building blocks of handler such as entity, service, controller etc.

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,1 +1,9 @@
-
+spring:
+  data:
+    mongodb:
+      authentication-database: admin
+      host: localhost
+      port: 27017
+      username: rootuser
+      password: rootpass
+      database: meysam
